Ensure newlines for text area
When used in email templates, ensure that newlines are replaced with
<br/>

--- a/Source/Umbraco/Views/Partials/FormEditor/Email/EmailTemplateSample.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Email/EmailTemplateSample.cshtml
@@ -81,7 +81,7 @@
         {
           <tr>
             <th>@field.Name</th>
-            <td>@field.SubmittedValueForEmail()</td>
+            <td>@Html.Raw(field.SubmittedValueForEmail())</td>
           </tr>
         }
       </tbody>
