--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -383,7 +383,7 @@
     &.page-selector {
 
       i {
-        vertical-align: text-top;
+        vertical-align: middle;
 
         &.icon-delete {
           margin-left: 4px !important;
