Rework on approval + bugfix data loading

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -551,7 +551,7 @@
           }
         }
 
-        &.approval-none {
+        &.approval-undecided {
           i.icon {
             &:before {
               color: @dimmedColor;
@@ -565,7 +565,7 @@
         &.approval-approved {
           i.icon {
             &:before {
-              color: #31b379;
+              color: #1cb973;
               content: "\e165"; /* checkmark */
             }
             &:hover:before {
