--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -538,6 +538,30 @@
             cursor: pointer;
           }
 
+          &.approval-undecided {
+            i.icon {
+              &:before {
+                color: @dimmedColor;
+                content: "\e165"; /* checkmark */
+              }
+              &:hover:before {
+                color: @dimmedColorActive;
+              }
+            }
+          }
+
+          &.approval-approved {
+            i.icon {
+              &:before {
+                color: #1cb973;
+                content: "\e165"; /* checkmark */
+              }
+              &:hover:before {
+                color: #239864;
+              }
+            }
+          }
+
           i, i:hover {
             display: inline-block !important;
           }
@@ -551,33 +575,10 @@
           }
         }
 
-        &.approval-undecided {
-          i.icon {
-            &:before {
-              color: @dimmedColor;
-              content: "\e165"; /* checkmark */
-            }
-            &:hover:before {
-              color: @dimmedColorActive;
-            }
-          }
-        }
-        &.approval-approved {
-          i.icon {
-            &:before {
-              color: #1cb973;
-              content: "\e165"; /* checkmark */
-            }
-            &:hover:before {
-              color: #239864;
-            }
-          }
-        }
-
         &.loading {
           color:@dimmedColor;
 
-          i.icon:before {
+          .toggle-approval i.icon:before {
             content: "\e153"; /* hourglass */
           }
         }
