Add anti forgery token

--- a/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
@@ -150,6 +150,9 @@
 
       @* determine whether a receipt message is available *@
       _fe[@formContent.Id].hasReceipt = @(string.IsNullOrWhiteSpace(form.ReceiptHeader) ? "false" : "true");
+
+      @* add anti forgery token *@
+      _fe[@formContent.Id].antiForgeryToken = "@form.AntiForgeryToken()";
     </script>
   }
   else if (maxSubmissionsExceededForCurrentUser)
