--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.consent.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.consent.cshtml
@@ -12,13 +12,10 @@
     </div>
   }
 
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" name="@Model.FormSafeName" value="true" required/>
-      @Model.Label
-    </label>
+  <label class="checkbox">
+    <input type="checkbox" name="@Model.FormSafeName" value="true" required/>
+    @Model.Label
+  </label>
 
-    @Html.Partial("FormEditor/FieldsSync/core.utils.helptext")
-    @Html.Partial("FormEditor/FieldsSync/core.utils.validationerror")
-  </div>
+  @Html.Partial("FormEditor/FieldsSync/core.utils.validationerror")
 </div>
