Add simple check to prevent Nullreference Ex
If user forgets to enter text in field consent or in field textparagraph, it generates a null exception on frontend which is too much.

--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.textparagraph.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.textparagraph.cshtml
@@ -1,4 +1,4 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.TextParagraphField>
 <p>
-  @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(Model.Text))
+  @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(String.IsNullOrWhiteSpace(Model.Text) ? String.Empty : Model.Text))
 </p>
