Prevent null reference exceptions in the async and noscript versions of the consent and textparagraph fields.

--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.consent.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.consent.cshtml
@@ -2,7 +2,7 @@
 <div class="form-group required @(Model.Invalid ? "has-error" : null) consent" action-field="@Model.FormSafeName">
   
   <div class="text">
-    @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(Model.ConsentText))
+    @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(string.IsNullOrWhiteSpace(Model.ConsentText) ? string.Empty : Model.ConsentText))
   </div>
   
   @if (string.IsNullOrWhiteSpace(Model.LinkText) == false && Model.Page != null)
