--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.textparagraph.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.textparagraph.cshtml
@@ -1,4 +1,4 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.TextParagraphField>
 <p>
-  @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(String.IsNullOrWhiteSpace(Model.Text) ? String.Empty : Model.Text))
+  @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(string.IsNullOrWhiteSpace(Model.Text) ? string.Empty : Model.Text))
 </p>
